Changes suggested by SonarLint were made